added a write option for nfc tags, needs debugging though <.<

--- a/src/pages/write/write.html
+++ b/src/pages/write/write.html
@@ -14,5 +14,30 @@
 
 
 <ion-content padding>
+    <ion-list>
+        <ion-item>
+          <ion-label color="primary">Status:</ion-label>
+          <ion-input placeholder="Place Tag" [(ngModel)] = "status"></ion-input>
+        </ion-item>
+        <ion-item>
+            <ion-label color="primary">input:</ion-label>
+            <ion-input placeholder="what you wish to write" [(ngModel)] = "input"></ion-input>
+        </ion-item>
+
+        <ion-item  [hidden] = "showSymbol">
+            <div id="loaderDiv">
+              <div class="loader"></div>
+            </div>
+          </ion-item>
+    
+          <ion-item [hidden] = "!showSymbol">
+            <div id = "vinkjeDiv">
+              <img src="vinkje.png" width=200 height=200/>
+            </div>
+          </ion-item>
+
+    </ion-list>
+
+    <button ion-button style="margin-top: 20" (click) = 'writeNFC()'>Register</button>
 
 </ion-content>
