updated the NFC write page, to something that works

--- a/src/pages/write/write.html
+++ b/src/pages/write/write.html
@@ -38,6 +38,6 @@
 
     </ion-list>
 
-    <button ion-button style="margin-top: 20" (click) = 'writeNFC()'>Register</button>
+    <button ion-button style="margin-top: 20" (click) = 'writeNFC()'>Write to card</button>
 
 </ion-content>
