--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -3,16 +3,18 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Home</ion-title>
+    <ion-title>Welcome</ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
+  <h3>Welcome to Flooftech's NFC app alpha version</h3>
 
   <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
+    I hope you enjoy your stay here! You can find the code for this on <a href="https://github.com/WellTemperedFate/NFC_Ionic_app">Github</a>
   </p>
+  
+  
+  <ion-footer>Feel free to change/use the code :)</ion-footer>
 
-  <button ion-button secondary menuToggle>Toggle Menu</button>
 </ion-content>
